# pseudo_random_generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Random.h  RandomFactory.cpp  RandomFactory.h
src/linear/: LinearCongruentialRandom.cpp  LinearCongruentialRandom.h
src/middle_square/: MiddleSquareRandom.cpp  MiddleSquareRandom.h
tests/: RecordedRandom.cpp  RecordedRandom.h  Test.h  TestRunner.cpp  TestRunner.h
tests/cycle/: CycleDetectionTest.cpp  CycleDetectionTest.h
tests/distribution/: DistributionTest.cpp  DistributionTest.h
tests/histograms/: DensityHistogramTest.cpp  DensityHistogramTest.h  EmpiricalDistributionTest.cpp  EmpiricalDistributionTest.h
tests/numeric/: NumericCharacteristicsTest.cpp  NumericCharacteristicsTest.h
tests/plane_distribution/: PlaneDistributionTest.cpp  PlaneDistributionTest.h
tools/analytics/drawing/: Bitmap.cpp  Bitmap.h  Chart.cpp  Chart.h  Color.cpp  Color.h  Renderer.cpp  Renderer.h
tools/analytics/histograms/: Histograms.cpp  Histograms.h
tools/export/bitmap/: Bitmap.cpp  Bitmap.h
tools/export/csv/: CsvExporter.cpp  CsvExporter.h
